kubernetes-book/ingress/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc2-web
            port:
              number: 81

      - path: /test
        pathType: Prefix
        backend:
          service:
            name: svc1-web
            port:
              number: 80
